--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -28,7 +28,7 @@
 
 <table width="100%"><tr><td width="10%" align="center" valign="middle">
 
-<div style="font-size: 24px;">
+<div style="font-size: 26px;">
 
 <a class="none" href="prefa.html">B<br>A<br>C<br>K</a>
 
@@ -64,14 +64,13 @@ Le riforme continuano ma nei dibattiti mancano sempre:<br>i <b><a class="line" h
 
 Il problema di fondo è chiaro e inconfutabile:<br><b><a class="line" href="repubblica.pdf" target="repubblica" title="ad Onorevoli e Senatori">Il DPR 380/2001: Sintomo dell’Irrisolta Transizione alla Repubblica</a></b>
 
-<!--
-<br><br>
-Ad ogni Autorità, Eccellenza e Personalità nel Paese
--->
-
 <br>
 
 <b><a class="line" href="urge_intervento.pdf" target="datevi_da_fare">Urge Pubblica Presa di Posizione ed Intervento sulle Camere</a></b>.
+
+<br><br>
+
+Norme inique come queste ben spiegano l'Astensionismo: in attesa della Repubblica<br><b><a class="line" href="amm_dem.html" target="" title="ad ogni essere pensante sulla Terra ed oltre">Per una Amministrazione Democratica e contro le iniquità del D.P.R. 380/2001</a></b>
 
 <br><br>
 
@@ -88,7 +87,7 @@ Lettere al Presidente della Repubblica<br>
 
 </td><td width="10%" align="center" valign="middle">
 
-<div style="font-size: 24px;">
+<div style="font-size: 26px;">
 
 <a class="none" href="euro_1.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
 
@@ -96,7 +95,7 @@ Lettere al Presidente della Repubblica<br>
 
 </td></tr></table>
 
-<br><br>
+<br><br><br>
 
 <i>
 <div style="font-size: 22px;">
