--- a/lab/repita/camps/immo/pdr_1.html
+++ b/lab/repita/camps/immo/pdr_1.html
@@ -4,10 +4,8 @@
 <meta charset="utf-8">
 
 <STYLE type="text/css">
-<!--
 .noline {color: black; text-decoration: none}
 .noline:hover {color: black; text-decoration: underline}
--->
 </STYLE>
 
 <TITLE>Laboratorio Eudemonia - Eudaemony Laboratory</TITLE>
@@ -123,10 +121,6 @@ tel. solo WSP: 339 5014947
 
 <br>
 
-Internet, 21/12/56 (<a class="noline" href="../../../tec/dt/index.html" target="epoch">TEC & Epoch</a>)
-
-<br><br>
-
 La Banca dei Pubblici Impieghi<br>
 <a class="noline" href="../../index.htm" target="">https://repita.hyperlinker.org</a>
 
@@ -134,6 +128,14 @@ La Banca dei Pubblici Impieghi<br>
 
 Impegno Inter-Nazionale per Dissolvere il<br>
 <a class="noline" href="index.html" target="">https://Sopruso-Immobiliare.hyperlinker.org</a>
+
+<div style="text-align: right; font-size: 28px;">
+
+<br>
+
+Internet, 21/12/56 (<a class="noline" href="../../../tec/dt/index.html" target="epoch">TEC & Epoch</a>)
+
+</div>
 
 </div>
 
