vive la france!

--- a/lab/repubblica/dir_lic.html
+++ b/lab/repubblica/dir_lic.html
@@ -7,29 +7,41 @@
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
 .box{width:100%;max-width:60rem;text-align:left}
-h1{font-size:1.4em;margin:0 0 2rem 0}
-p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
+h1{font-size:1.4em;margin:4rem 0 3rem 0}
+p{font-size:1em;line-height:1.5;margin:0 0 2rem 0}
 .nav{text-align:center;font-size:1.4em;font-weight:bold;}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
-.index{text-align:center;font-size:1.4em;margin-top:5rem;margin-bottom:1rem;display:block;}
+.index{text-align:center;font-size:1.4em;margin-top:5rem;margin-bottom:5rem;display:block;}
 .spacer{display:inline-block;width:4rem}
 </style>
 </head>
 <body>
 
 <div class="box">
+
   <h1>Diritti d'Autore e Licenza d'Utilizzo</h1>
 
-  <p>I testi qui presenti denunciano il mai mancato sorgere in Italia di una Repubblica di senso compiuto e le conseguenze che questo inadempimento produce nel Paese e sul Popolo, tuttora succube della indebitamente permasta pre-esistente amministrazione di stampo tiranno. Viene dunque presentato il progetto della <i>Banca dei Pubblici Impieghi</i>: un Istituto che redistribuisce periodicamente, regolarmente, gli impieghi, poteri e redditi pubblici, un sacro Ente sine qua non la Repubblica rimane dichiarata ma non concretizzata.
+  <p>I testi qui presenti denunciano il mai mancato sorgere in Italia di una Repubblica di senso compiuto e le conseguenze che questo inadempimento ha prodotto nel Paese e sul Popolo, tuttora succube della indebitamente permasta pre-esistente amministrazione di stampo tiranno. Viene dunque presentato il progetto della <i><a href="index.html">Banca dei Pubblici Impieghi</a></i>: un Istituto che redistribuisce periodicamente, regolarmente, gli impieghi, poteri e redditi pubblici, un sacro Ente sine qua non la Repubblica rimane dichiarata ma non concretizzata.
 
-<br><br>
+</p><p>
 
 È consentito citare fino a 120 caratteri, purché sia indicata la fonte con link attivo. È vietata qualsiasi riproduzione integrale su stampa, siti o social senza autorizzazione scritta.
 
-<br><br>
+</p><p>
 
-Il progetto della <i>Banca dei Pubblici Impieghi</i>, qui presentato in un sito di sintesi derivante dai più ampi siti storici sviluppati nell'arco dei trent'anni da quando è stata concepita l'idea, è invece rilasciato sotto speciale Licenza per l'attuazione ufficiale su di un territorio e soggetto al pagamento di una royalty al suo Autore. In piena concordanza con uno degli altri progetti del Laboratorio Eudemonia: il <i><a href="../mercato/index.htm">Mercato delle Innovazioni Sociali</a></i>.
+Il progetto della <i><a href="index.html">Banca dei Pubblici Impieghi</a></i>, qui presentato in un sito di sintesi derivante dai più ampi siti storici sviluppati nell'arco di trent'anni, da quando è sorta la presa di coscienza, è invece rilasciato sotto speciale Licenza per l'attuazione ufficiale su di un territorio e soggetto al pagamento di una royalty al suo Autore. In piena concordanza con uno degli altri progetti del Laboratorio Eudemonia: il <i><a href="../mercato/index.htm" target="mercato">Mercato delle Innovazioni Sociali</a></i>.
+
+</p><p>
+
+Un vero avanzamento culturale, sociale, umano negli ultimi 80 anni non è avvenuto perché nessuno ha trovato convenienza nel progredire, venendo invece escluso. La tecnologia è avanzata grazie al brevetto industriale. Senza il <i><a href="../mercato/confronto.htm" target="idee">Brevetto delle Idee</a></i>, l'umanesimo è perfino regredito. Il Laboratorio Eudemonia, anteponendo il risultato al successo, ha spinto oltre il limite dell'umana comprensione per quanto riguarda i processi sociali. Ma il progresso non sarà mai continuo se non si dota la società di adeguati sistemi di ricompensa.
+
+<!--
+
+Ed il Laboratorio Eudemonia, anche in questo, è in avanzata posizione di <i><a href="../corpus/index.html">apripista</a></i>.
+
+-->
+
 </p>
 
 <i>
