--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -7,18 +7,20 @@
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
 .box{width:100%;max-width:60rem;text-align:left}
-h1{font-size:2.2em;margin:0 0 2rem 0}
+h1{font-size:2.2em;margin:7rem 0 2rem 0}
 p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
-.index{text-align:center;font-size:1.4em;margin-top:7rem;margin-bottom:1rem;display:block;}
+.index{text-align:center;font-size:1.4em;margin-top:7rem;margin-bottom:5rem;display:block;}
 .spacer{display:inline-block;width:4rem}
 </style>
 </head>
 <body>
 
 <div class="box">
+
+<h1>La REPUBBLICA di SENSO COMPIUTO</h1>
 
 <br><br>
 
@@ -54,15 +56,11 @@ a:hover{text-decoration:underline}
 
 <i>
 <div class="index" style="font-size: 22px;">
-<strong><a href="index.html">La REPUBBLICA di SENSO COMPIUTO</a></strong>
-<br>
-<span style="font-size: 18px;">
 di <a class="none" href="../hl_it.htm" target="dandan">Danilo D'Antonio</a>, <a class="none" href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
 <br>
 <a class="none" href="mailto:dda@hyperlinker.org">e-mail</a>, <a class="none" href="mailto:danilo.dantonio@domicilio.online">PEC</a>, smart: (previo WSP) 339 5014947
 <br>
 <a class="none" href="dir_lic.html" target="diritti_licenza">Diritti d'Autore e Licenza d'Utilizzo</a>
-</span>
 </div>
 </i>
 
