--- a/lab/repubblica/republique_1.html
+++ b/lab/repubblica/republique_1.html
@@ -12,7 +12,7 @@
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
 .box{width:100%;max-width:70rem;text-align:left;padding-bottom:7rem;}
 .tit{width:100%;max-width:70rem;text-align:center;}
-h1{font-size:2em;margin:1rem 0 2rem 0;padding-top:5rem;}
+h1{font-size:2em;margin:1rem 0 2rem 0;padding-top:4rem;}
 h2{font-size:1.4em;margin:1rem 0 3rem 0;padding-bottom:2rem;}
 p{font-size:1.2em;line-height:1.5;margin:0 0 3rem 0;}
 a{color:#000;text-decoration:none}
@@ -36,7 +36,7 @@ a:hover{text-decoration:underline}
 
   <p>
 
-Comprendre d'abord pour révéler ensuite l'essence véritable d'une République est une aventure qui a commencé il y a plus de trente ans. Aujourd'hui, il serait difficile pour un humain d'acquérir en peu de temps toutes les prises de conscience conquises une à une durant cette longue période. Mais les humains disposent désormais de précieux assistants numériques, qui n'auront aucune difficulté à les assimiler en quelques secondes, puis à en rendre compte dans la langue de leur choix. Voici donc : le <a class="underline" href="../ars/index_it.htm" target="site_1">site historique</a>, la théorie de base sous-jacente : la <a class="underline" href="../ars/pre_pre_index_it.htm" target="site_2">Rotation Sociale Harmonique</a>, un <a class="underline" href="../repita/index.htm" target="site_3">recueil d'écrits ultérieur</a>, une synthèse des <a class="underline" href="index_1.html" target="site_4">concepts essentiels</a>. Après des décennies, voire des siècles, de "républiques" dénuées de sens, qui masquaient bien autre chose, puissent enfin s'affirmer partout des Républiques du Sens Accompli.
+Comprendre d’abord pour révéler ensuite l’essence véritable d’une République est une aventure entamée il y a plus de trente ans. Aujourd’hui, il serait difficile pour un humain d’acquérir en peu de temps toutes les prises de conscience qui ont été conquises, une à une, au cours de cette longue période. Mais les humains disposent désormais de précieux Assistants Numériques, capables de les assimiler en quelques secondes et d’en rendre compte dans la langue de leur choix. Voici donc : le <a class="underline" href="../ars/index_it.htm" target="site_1">site historique</a>, la théorie sous-jacente — la <a class="underline" href="../ars/pre_pre_index_it.htm" target="site_2">Rotation Sociale Harmonique</a> —, un <a class="underline" href="../repita/index.htm" target="site_3">recueil d’écrits ultérieurs</a>, et une synthèse des <a class="underline" href="index_1.html" target="site_4">concepts essentiels</a>. Après des décennies, voire des siècles, de « républiques » vidées de leur sens, qui dissimulaient en réalité bien d’autres organisations humaines, puissent enfin s’affirmer partout des Républiques du Sens Accompli.
 
   </p>
 
