--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -70,7 +70,7 @@ Il problema di fondo è chiaro e inconfutabile:<br><b><a class="line" href="repu
 
 <br><br>
 
-Norme inique come queste ben spiegano l'Astensionismo: in attesa della Repubblica<br><b><a class="line" href="amm_dem.html" target="" title="ad ogni essere pensante sulla Terra ed oltre">Per una Amministrazione Democratica e contro le iniquità del D.P.R. 380/2001</a></b>
+Norme inique come queste ben spiegano l'Astensionismo: in attesa della Repubblica.<br><b><a class="line" href="amm_dem.html" target="" title="ad ogni essere pensante sulla Terra ed oltre">Per una Amministrazione Democratica e contro le iniquità del D.P.R. 380/2001</a></b>
 
 <br><br>
 
