--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -6,8 +6,8 @@
 <title>Opere d'Arte di Danilo D'Antonio</title>
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
-.box{width:100%;max-width:60rem;text-align:left}
-h1{font-size:2.2em;margin:7rem 0 2rem 0}
+.box{width:100%;max-width:60rem;text-align:center}
+h1{font-size:2.2em;margin:6rem 0 2rem 0}
 p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
 a{color:#000;text-decoration:none}
@@ -44,7 +44,35 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
+<a href="transizione.html">Urge ancora ovunque Transizione Democratica!</a>
+
+</p><p>
+
 <a href="dna.html">Cambiamo DNA alle nostre società</a>
+
+</p><p>
+
+<a href="indicatore.html">L'Indicatore Unico di Democrazia</a>
+
+</p><p>
+
+<a href="dna.html"></a>
+
+</p><p>
+
+<a href="dna.html"></a>
+
+</p><p>
+
+<a href="dna.html"></a>
+
+</p><p>
+
+<a href="dna.html"></a>
+
+</p><p>
+
+<a href="dna.html"></a>
 
 </p><p>
 
@@ -60,7 +88,7 @@ di <a class="none" href="../hl_it.htm" target="dandan">Danilo D'Antonio</a>, <a 
 <br>
 <a class="none" href="mailto:dda@hyperlinker.org">e-mail</a>, <a class="none" href="mailto:danilo.dantonio@domicilio.online">PEC</a>, smart: (previo WSP) 339 5014947
 <br>
-<a class="none" href="dir_lic.html" target="diritti_licenza">Diritti d'Autore e Licenza d'Utilizzo</a>
+<a class="none" href="dir_lic.html" target="">Diritti d'Autore e Licenza d'Utilizzo</a>
 </div>
 </i>
 
