--- a/lab/corpus/prefaz.html
+++ b/lab/corpus/prefaz.html
@@ -54,7 +54,8 @@ L'Opera d'Arte trascende la mera forma. Non è solo scultura, pittura o immagine
 
 <div style="font-size: 69px; text-align: right; max-width: 700px; padding: 20px;">
 
-<a class="nonenone" href="dpr_380.html">&#9658;</a>
+<a class="nonenone" href="index.html">&#9668;</a>
+<a class="nonenone" href="art_56.html">&#9658;</a>
 
 </div>
 
