--- a/lab/repita/camps/immo/amm_dem.html
+++ b/lab/repita/camps/immo/amm_dem.html
@@ -53,7 +53,7 @@ In altre parole: una permasta struttura amministrativa pre-repubblicana contrast
 
 <br><br>
 
-Ebbene: norme come il D.P.R.380/2001 (che impone al Cittadino innocente, dotato di ogni documento ab origine necessario all'acquisto del suo immobile, di farsi giustizia da sé: rivalendosi egli sui responsabili di "abusi" edilizi che abbia scoperto dopo decenni nella sua abitazione) mostrano inequivocabilmente come il "cittadino" sia tale solo sulla Carta ma nella realtà delle cose rimane preda di un sistema antico il cui perenne possesso da parte di una minoranza appare, come mai prima, cosa al di sopra di ogni tollerabilità.
+Ebbene: norme come il D.P.R.380/2001 (che colpisce il Cittadino innocente, dotato di ogni documento ab origine necessario all'acquisto del suo immobile, e lo costringe a farsi giustizia da sé: dovendosi egli rivalere sui responsabili di "abusi" edilizi che abbia scoperto dopo decenni nella sua abitazione) mostrano come il "cittadino" sia tale sulla Carta ma nella realtà delle cose rimane preda di un sistema antico il cui perenne possesso da parte di una minoranza appare, ogni giorno di più, cosa al di sopra della tollerabilità.
 
 <br><br>
 
