--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -50,7 +50,7 @@ Chi ha acquistato in buona fede (decenni fa, quando i documenti ufficiali non er
 
 <br><br>
 
-Qui si richiama dunque i legislatori ad una immediata riforma del D.P.R. 380/2001 per esentare da ogni conseguenza nefasta i proprietari incolpevoli, limitando il loro obbligo all’aggiornamento documentale.
+Qui si richiama dunque i legislatori ad <strong>una immediata riforma del D.P.R. 380/2001</strong> per esentare da ogni conseguenza nefasta i proprietari incolpevoli, limitando il loro obbligo all’aggiornamento documentale.
 
 </font>
 
