--- a/lab/repubblica/dir_lic.html
+++ b/lab/repubblica/dir_lic.html
@@ -30,13 +30,22 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-Il progetto della <i><a href="index.html">Banca dei Pubblici Impieghi</a></i>, qui presentato in un sito di sintesi derivante dai più ampi siti storici sviluppati nell'arco di trent'anni, da quando è sorta la presa di coscienza, è invece rilasciato sotto speciale Licenza per l'attuazione ufficiale su di un territorio e soggetto al pagamento di una royalty al suo Autore. In piena concordanza con uno degli altri progetti del Laboratorio Eudemonia: il <i><a href="../mercato/index.htm" target="mercato">Mercato delle Innovazioni Sociali</a></i>.
+Il progetto della <i><a href="index.html">Banca dei Pubblici Impieghi</a></i>, qui presentato in un sito di sintesi derivante dai più ampi siti storici sviluppati nell'arco di trent'anni, da quando è sorta la presa di coscienza, è invece rilasciato sotto speciale Licenza per l'attuazione su di un territorio.
+
+</p><p>
+
+Al riguardo si contatti l'Autore e Proprietario del Progetto.
+
+
+<!--
+
+e soggetto al pagamento di una royalty al suo Autore. In piena concordanza con uno degli altri progetti del Laboratorio Eudemonia: il <i><a href="../mercato/index.htm" target="mercato">Mercato delle Innovazioni Sociali</a></i>.
 
 </p><p>
 
 Un vero avanzamento culturale, sociale, umano negli ultimi 80 anni non è avvenuto perché nessuno ha trovato convenienza nel progredire, venendo invece escluso. La tecnologia è avanzata grazie al brevetto industriale. Senza il <i><a href="../mercato/confronto.htm" target="idee">Brevetto delle Idee</a></i>, l'umanesimo è perfino regredito. Il Laboratorio Eudemonia, anteponendo il risultato al successo, ha spinto oltre il limite dell'umana comprensione per quanto riguarda i processi sociali. Ma il progresso non sarà mai continuo se non si dota la società di adeguati sistemi di ricompensa.
 
-<!--
+</p><p>
 
 Ed il Laboratorio Eudemonia, anche in questo, è in avanzata posizione di <i><a href="../corpus/index.html">apripista</a></i>.
 
@@ -52,8 +61,6 @@ Ed il Laboratorio Eudemonia, anche in questo, è in avanzata posizione di <i><a 
 di <a class="none" href="../hl_it.htm" target="dandan">Danilo D'Antonio</a>, <a class="none" href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
 <br>
 <a class="none" href="mailto:dda@hyperlinker.org">e-mail</a>, <a class="none" href="mailto:danilo.dantonio@domicilio.online">PEC</a>, smart: (previo WSP) 339 5014947
-<br>
-<a class="none" href="dir_lic.html" target="diritti_licenza">Diritti d'Autore e Licenza d'Utilizzo</a>
 </span>
 </div>
 </i>
