--- a/lab/repita/camps/immo/amm_dem.html
+++ b/lab/repita/camps/immo/amm_dem.html
@@ -24,7 +24,7 @@
 
 <div style="text-align: left; font-size: 48px;"><b>
 
-Per una Amministrazione Democratica<br>e contro le iniquità del D.P.R. 380/2001
+Banca dei Pubblici Impieghi:<br>antidoto perfetto contro ogni iniquità.<br>D.P.R. 380/2001 compreso.
 
 </b></div>
 
