--- a/lab/corpus/rut_56.html
+++ b/lab/corpus/rut_56.html
@@ -63,21 +63,16 @@ Titolo dell'opera:
 
 <br><br>
 
-Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è nell'ultima pagina della Lettera. Somma richiesta: 27.000.000 (ventisette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
-
-<!--
-
- In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
-
--->
+Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è presente nel frontespizio della Collezione. Somma richiesta: 27.000.000 (ventisette milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
 
 </span>
 
 </td></tr></table>
 
-<div style="font-size: 69px; text-align: center; max-width: 700px; padding: 20px;">
+<div style="font-size: 69px; text-align: right; max-width: 800px;">
 
-<a class="nonenone" href="goes_on.html">&#9660;</a>
+<a class="nonenone" href="art_56.html">&#9668;</a>
+<a class="nonenone" href="goes_on.html">&#9658;</a>
 
 </div>
 
