--- a/lab/index.html
+++ b/lab/index.html
@@ -41,6 +41,7 @@
             'repubblica-democrazia.hyperlinker.org': 'https://hyperlinker.org/repubblica/index.html',
             'republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
             'vive-la-republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
+            'republic.hyperlinker.org': 'https://hyperlinker.org/repubblica/republic.html',
         };
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
