--- a/lab/repubblica/dir_lic.html
+++ b/lab/repubblica/dir_lic.html
@@ -30,24 +30,23 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-Il progetto della <i><a href="index.html">Banca dei Pubblici Impieghi</a></i>, qui presentato in un sito di sintesi derivante dai più ampi siti storici sviluppati nell'arco di trent'anni, da quando è sorta la presa di coscienza, è invece rilasciato sotto speciale Licenza per l'attuazione su di un territorio.
+Il progetto della <i><a href="index.html">Banca dei Pubblici Impieghi</a></i>, qui presentato in un sito di sintesi derivante dai più ampi siti storici sviluppati nell'arco di trent'anni, da quando è sorta la presa di coscienza, è invece rilasciato sotto speciale Licenza per l'attuazione su di un territorio e soggetto al pagamento di una royalty al suo Autore. In piena concordanza con uno degli altri progetti del Laboratorio Eudemonia: il <i><a href="../mercato/index.htm" target="mercato">Mercato delle Innovazioni Sociali</a></i>.
 
 </p><p>
 
-Al riguardo si contatti l'Autore e Proprietario del Progetto.
+Un vero avanzamento culturale e sociale negli ultimi 80 anni non è avvenuto perché nessuno ha trovato convenienza nel progredire, venendo invece escluso. La tecnologia è avanzata grazie al brevetto industriale. L'umanesimo senza il <i><a href="../mercato/confronto.htm" target="idee">Brevetto delle Idee</a></i> è invece perfino regredito. Il Laboratorio Eudemonia, anteponendo il risultato al successo, ha spinto oltre il limite dell'umana comprensione per quanto riguarda i processi sociali. Ma il progresso non sarà continuo se non si dota la società di adeguati sistemi di ricompensa. Ed il Laboratorio Eudemonia, anche in questo, è in avanzata posizione di <i><a href="../corpus/index.html">apripista</a></i>.
 
+</p><p>
+
+Qualcosa da ridire? Allora facciamo un conto. Ottant'anni di finta "repubblica", di una centralità che altro non è che il vecchio stato monarchico spacciato per "repubblica". Interi parlamenti e senati ricolmi di tizi che non hanno la minima idea di cosa sia davvero la Repubblica, di come essa costruisca la Democrazia. Quanti presidenti in questi 80 anni senza una vera Repubblica? Quanti stipendi tra tutti codesti grandi proprietari della nostra santa Repubblica? E quanri professori, quanti ricercatori, quanti epserti, quanti serbatoi di pensiero, tutti a raccontarci la fine della Democrazia quando questa ancora non è potuta sorgere in alcun posto del mondo! Quanto denaro hanno intasvato tutti costoro in otto decenni, lasciando un mondo in balia di una incultura risalente ad un secolo fa? No, non c'è prezzo per quello che hanno fatto e devono ripagare, tutti, dal primo all'ultimo. E non c'è prezzo per ricompensare proporzionalmente chi invece ha fatto chiarezza.
+
+</p><p>
+
+Ecco perché ogni parola, progetto, visione del Laboratorio Eudemonia ha un prezzo. Perché a molti umani, e non più ad uno solo, deve venire un ardente desiderio di fare del suo meglio e non del suo peggio. Come invece han fatto tutti quelli sopra detti. 
 
 <!--
 
-e soggetto al pagamento di una royalty al suo Autore. In piena concordanza con uno degli altri progetti del Laboratorio Eudemonia: il <i><a href="../mercato/index.htm" target="mercato">Mercato delle Innovazioni Sociali</a></i>.
-
-</p><p>
-
-Un vero avanzamento culturale, sociale, umano negli ultimi 80 anni non è avvenuto perché nessuno ha trovato convenienza nel progredire, venendo invece escluso. La tecnologia è avanzata grazie al brevetto industriale. Senza il <i><a href="../mercato/confronto.htm" target="idee">Brevetto delle Idee</a></i>, l'umanesimo è perfino regredito. Il Laboratorio Eudemonia, anteponendo il risultato al successo, ha spinto oltre il limite dell'umana comprensione per quanto riguarda i processi sociali. Ma il progresso non sarà mai continuo se non si dota la società di adeguati sistemi di ricompensa.
-
-</p><p>
-
-Ed il Laboratorio Eudemonia, anche in questo, è in avanzata posizione di <i><a href="../corpus/index.html">apripista</a></i>.
+Al riguardo si contatti l'Autore e Proprietario del Progetto.
 
 -->
 
