--- a/lab/corpus/art_56.html
+++ b/lab/corpus/art_56.html
@@ -27,7 +27,7 @@
 
 <table width="90%" height="80%" cellpadding="48pt" cellspacing="48pt"><tr><td width="50%" align="center" valign="middle">
 
-<a href="https://arweave.net/s1NioAMph5Kyo6tV6lDpfZ8h0K6vnssAKibToDghryg" target="s1NioAMph5Kyo6tV6lDpfZ8h0K6vnssAKibToDghryg" title="Lettere dal titolo: Che c'è di onorevole in tutto questo?">
+<a href="https://arweave.net/BWfONVHi0yaE6fZoOKDrxUUA48tRFQGgpA-E5BwoAYw" target="BWfONVHi0yaE6fZoOKDrxUUA48tRFQGgpA-E5BwoAYw" title="Art, culture, where are you?">
 
 <img src="art_56.svg" width="70%" style="border: 2px solid black;" alt="Logo D.P.R.380/2001">
 
@@ -35,7 +35,7 @@
 
 </td><td width="50%" align="left" valign="middle">
 
-<a class="none" href="https://explorer.perawallet.app/asset/3336219214/" target="3336219214" title="Registrazione del bene digitale tramite Algorand Standard Asset">
+<a class="none" href="https://explorer.perawallet.app/asset//" target="" title="Digital assets certification through an Algorand Standard Asset">
 
 <span style="font-size: 36px;">
 
@@ -49,35 +49,32 @@
 
 <span style="font-size: 22px;">
 
-Collezione di Lettere inviate agli Onorevoli e Senatori italiani, dal 02/06 al 12/10 dell’anno 56 della Nuova Era Terrestre, per denunciare l'iniqua ferocia del D.P.R. 380/2001.
+A series of seven blank canvases, each flanked by a testimony to the great absence of both the
+worlds of art and culture from perhaps the most important theme of our time, and a call to boldly
+address it.
 
 <br><br>
 
-Titolo della Collezione:
+Title of the series of canvases:
 
-<a class="none" href="https://arweave.net/s1NioAMph5Kyo6tV6lDpfZ8h0K6vnssAKibToDghryg" target="s1NioAMph5Kyo6tV6lDpfZ8h0K6vnssAKibToDghryg">
+<a class="none" href="https://arweave.net/" target="">
 
-<i>Che c'è di onorevole in tutto questo?</i>
+<i>Art! Culture! Where are you?</i>
 
 </a>
 
 <br><br>
 
-Opera su network perenne <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> e certificata su blockchain <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>. La licenza è presente nel frontespizio della Collezione. Somma richiesta: 9.000.000 (nove milioni) di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
-
-<!--
-
- In vendita presso <i><a class="none" href="../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>.
-
--->
+Artwork in .svg format contained in a .zip file deposited on the <a class="none" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a> perpetual network and certified on the <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a> blockchain. The license is on the frontispiece of the Series. Sum requested for every canvas: 500,000 (five hundred thousand) <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>.
 
 </span>
 
 </td></tr></table>
 
-<div style="font-size: 69px; text-align: center; max-width: 700px; padding: 20px;">
+<div style="font-size: 69px; text-align: right; max-width: 800px;">
 
-<a class="nonenone" href="rut_56.html">&#9660;</a>
+<a class="nonenone" href="prefaz.html">&#9668;</a>
+<a class="nonenone" href="dpr_380.html">&#9658;</a>
 
 </div>
 
