--- a/lab/corpus/dpr_380.html
+++ b/lab/corpus/dpr_380.html
@@ -75,11 +75,13 @@ Opera su network perenne <a class="none" href="https://coinmarketcap.com/currenc
 
 </td></tr></table>
 
-<div style="font-size: 69px; text-align: center; max-width: 700px; padding: 20px;">
+<div style="font-size: 69px; text-align: right; max-width: 800px;">
 
-<a class="nonenone" href="rut_56.html">&#9660;</a>
+<a class="nonenone" href="art_56.html">&#9668;</a>
+<a class="nonenone" href="rut_56.html">&#9658;</a>
 
 </div>
+
 
 </td></tr></table></center>
 
