--- a/lab/repita/camps/immo/amm_dem.html
+++ b/lab/repita/camps/immo/amm_dem.html
@@ -33,7 +33,8 @@ Banca dei Pubblici Impieghi:<br>antidoto perfetto contro ogni iniquità.<br>D.P.
 <div style="text-align: right; font-size: 28px;">
 
 Lettera Aperta ad ogni Amministrazione,<br>
-Ente Locale e Nazionale ed Autorità d'Italia
+Ente Locale e Nazionale ed Autorità d'Italia,<br>
+per conoscenza ad ogni essere pensante:
 
 </div>
 
@@ -53,7 +54,7 @@ In altre parole: una permasta struttura amministrativa pre-repubblicana contrast
 
 <br><br>
 
-Ebbene: norme come il D.P.R.380/2001 (che colpisce il Cittadino innocente, dotato di ogni documento ab origine necessario all'acquisto del suo immobile, e lo costringe a farsi giustizia da sé: dovendosi egli rivalere sui responsabili di "abusi" edilizi che abbia scoperto dopo decenni nella sua abitazione) mostrano come il "cittadino" sia tale sulla Carta ma nella realtà delle cose rimane preda di un sistema antico il cui perenne possesso da parte di una minoranza appare, ogni giorno di più, cosa al di sopra della tollerabilità.
+Ebbene: norme come il D.P.R.380/2001 (che colpisce il Proprietario innocente, dotato di ogni documento ab origine necessario all'acquisto del suo immobile, e lo costringe a farsi giustizia da sé: dovendosi egli rivalere sui responsabili di "abusi" edilizi che abbia scoperto dopo decenni nella sua abitazione) mostrano come il "cittadino" sia tale sulla Carta ma nella realtà delle cose rimane preda di un sistema antico il cui perenne possesso da parte di una minoranza appare, ogni giorno di più, cosa al di sopra della tollerabilità.
 
 <br><br>
 
